--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ compose-material3 = "1.3.0-beta04"
 compose-ui = "1.7.0-beta05"
 coroutines = "1.9.0-RC"
 dagger = "2.51.1"
+dependencies-sorter = "0.7"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.5"
 espresso = "3.6.1"
@@ -61,6 +62,7 @@ test-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 # :build-logic
 android-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 compose-compiler-gradle = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin"}
+dependencies-sorter-gradle = { module = "com.squareup:sort-dependencies-gradle-plugin", version.ref = "dependencies-sorter" }
 ksp-gradle = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
@@ -87,10 +89,10 @@ scoredroid-android-feature-impl = { id = "org.scoredroid.android-feature-impl" }
 scoredroid-android-feature-public = { id = "org.scoredroid.android-feature-public" }
 scoredroid-android-lib = { id = "org.scoredroid.android-lib" }
 scoredroid-dagger = { id = "org.scoredroid.dagger" }
-scoredroid-detekt = { id = "org.scoredroid.detekt" }
 scoredroid-enable-compose = { id = "org.scoredroid.enable-compose" }
 scoredroid-kotlin-module = { id = "org.scoredroid.kotlin-module" }
 scoredroid-kotlin-module-junit5-setup = { id = "org.scoredroid.kotlin-module-junit5-setup" }
+scoredroid-quality = { id = "org.scoredroid.quality" }
 scoredroid-feature-entrypoint = { id = "org.scoredroid.feature-entrypoint" }
 scoredroid-feature-impl = { id = "org.scoredroid.feature-impl" }
 scoredroid-feature-public = { id = "org.scoredroid.feature-public" }
